--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,8 @@
 
   <title>snackproudv1</title>
   <link rel="manifest" href="manifest.json">
+  
+  <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
