Intergrated web into monile

--- a/web/index.html
+++ b/web/index.html
@@ -19,10 +19,9 @@
   <title>snackproudv1</title>
   <link rel="manifest" href="manifest.json">
 </head>
+<script src="https://js.stripe.com/v3/"></script>
 <body>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
+  
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
